unpackaged/main/default/objects/iWave_PROscores__iWave_PRO_Score__c/iWave_PROscores__iWave_PRO_Score__c.object-meta.xml
<CustomObject>
    <customHelpPage>iWave_PROscores__PROscore_help</customHelpPage>
    <description>This is the iWave Score Object linked to the Contact object. It contains all of the iWave Score values (iWave Score, Analytics, RFM, etc)</description>
    <label>iWave Score</label>
    <nameField>
        <displayFormat>PROSCORE-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iWave Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>