unpackaged/main/default/objects/iWave_PROscores__iWave_PRO_Score__c/fields/iWave_PROscores__Affinity_Category__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Affinity_Category__c</fullName>
    <description>Three character identifier for scoring organization's primary charitable affinity</description>
    <inlineHelpText>Three character identifier for scoring organization's primary charitable affinity</inlineHelpText>
    <label>Affinity Category</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>