unpackaged/main/default/objects/iWave_PROscores__iWave_PRO_Score__c/fields/iWave_PROscores__PRO_Score_View_URL__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__PRO_Score_View_URL__c</fullName>
    <formula>HYPERLINK('/apex/iWave_PROscores__iWavePROScoreDetailView?id=' + Id, Name, '_self')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Details</label>
    <type>Text</type>
</CustomField>