unpackaged/main/default/objects/iWave_PROscores__iWave_PRO_Score__c/fields/iWave_PROscores__Screening_Project_Request__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Screening_Project_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screening Project Request</label>
    <referenceTo>iWave_PROscores__Screening_Project_Request__c</referenceTo>
    <relationshipLabel>iWave Scores</relationshipLabel>
    <relationshipName>iWave_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>